# cookiecutter-cdk-python

./: .markdownlint.yaml  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json
.github/: semantic.yml
.github/workflows/: comment_issues.yml
{{cookiecutter.service_name}}/: .pre-commit-config.yaml  Makefile  SECURITY.md  app.py  bandit.yaml  cdk.json  mkdocs.yml  package.json  pyproject.toml
{{cookiecutter.service_name}}/.github/workflows/: labeler.yml  pr-serverless-service.yml  pr.yml  scorecard.yml
{{cookiecutter.service_name}}/cdk/: setup.py
{{cookiecutter.service_name}}/cdk/{{cookiecutter.service_name}}/: constants.py  monitoring.py
{{cookiecutter.service_name}}/cdk/{{cookiecutter.service_name}}/configuration/json/: dev_configuration.json
{{cookiecutter.service_name}}/cdk/{{cookiecutter.service_name}}/pipeline/: service_stage.py  setup_stage.py
{{cookiecutter.service_name}}/cdk/{{cookiecutter.service_name}}/stacks/: oidc_setup_stack.py  service_stack.py
{{cookiecutter.service_name}}/docs/: index.md
{{cookiecutter.service_name}}/scripts/: bootstrap.sh
{{cookiecutter.service_name}}/tests/e2e/: test_create_order.py
{{cookiecutter.service_name}}/tests/infrastructure/: test_cdk.py
{{cookiecutter.service_name}}/tests/unit/: test_parse_configuration.py
{{cookiecutter.service_slug}}/: CONTRIBUTING.md  app.py  cdk.json  mkdocs.yml
{{cookiecutter.service_slug}}/.github/workflows/: pr_service.yml
{{cookiecutter.service_slug}}/cdk/{{cookiecutter.service_name}}/: constants.py  service_stack.py
{{cookiecutter.service_slug}}/tests/infrastructure/: test_cdk.py
{{cookiecutter.service_slug}}/tests/integration/: conftest.py  test_feature_flags.py
