[tool.poetry]
name = "{{cookiecutter.service_name}}"
version = "1.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: {{cookiecutter.python_version}}",
]
repository="http://www.github.com/{{cookiecutter.git_repo_url}}"
readme = "README.md"
keywords = ["{{cookiecutter.service_name}}"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
pydantic = {version = "^2.0.3"}
email-validator = {version = "*"}
aws-lambda-powertools =  {extras = ["tracer"],version = "^2.20.0"}
mypy-boto3-dynamodb = "*"
cachetools = "*"
boto3 = "^1.26.125"
aws-lambda-env-modeler = "*"

[tool.poetry.dev-dependencies]
# CDK
{{cookiecutter.service_name}}-cdk = {path = "cdk", develop = true}
aws-cdk-lib = ">=2.99.0"
constructs = ">=10.0.0"
cdk-nag = ">2.0.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.99.0-alpha.0"
"aws-cdk.aws-appconfig-alpha" = "^2.99.0-alpha.0"
cdk-monitoring-constructs = "*"
# DEV
pytest = "*"
pytest-mock = "*"
pycodestyle = "*"
pytest-cov = "*"
pytest-html = "*"
python-dateutil = "*"
python-dotenv = "*"
GitPython = "*"
yapf = "*"
radon = "*"
xenon = "*"
pre-commit = "*"
flake8 = "*"
isort = "*"
mkdocs-material = "*"
mkdocs-git-revision-date-plugin = "*"
types-cachetools = "*"
mypy = "*"
types-requests = "*"
toml = "*"

[tool.isort]
py_version = 312
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 150
skip = [
    ".gitignore",
    ".dockerignore",
    ".venv",
    ".build",
    "cdk.out",
    ".git",
    "node_modules",
]

[tool.yapfignore]
ignore_patterns = [".git", ".venv", ".build", "cdk.out", "node_modules"]

[tool.pytest.ini_options]
testpaths = "tests"
